fix iframe size

--- a/index.html
+++ b/index.html
@@ -3,9 +3,6 @@
     <head>
         <title>Eagle Cloud UT</title>
         <style>
-            body {
-                background-color: #13181A;
-            }
             .container {
                 display: flex;
                 flex-direction: row;
@@ -13,18 +10,18 @@
                 align-items: flex-start;
             }
             .form {
-
+                flex-grow: 1;
             }
             .prototype {
-
+                flex-grow: 10;
             }
             
         </style>
     </head>
 <body>
     <div class="container">
-        <iframe class="form" src="https://docs.google.com/forms/d/e/1FAIpQLSeZnTWkyhLD-vzapd3xoOZJdpK9Cv73pSWZBwYUgBIcFgf3qw/viewform?embedded=true" width="480" height="900" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-        <iframe class="prototype" style="border: 1px solid rgba(0, 0, 0, 0.1);" width="800" height="450" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoVz2gg3oZiiYZiDIpkt2vD%2FMVP%3Fnode-id%3D465%253A43%26viewport%3D450%252C228%252C0.10298627614974976%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+        <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZnTWkyhLD-vzapd3xoOZJdpK9Cv73pSWZBwYUgBIcFgf3qw/viewform?embedded=true" width="640" height="2136" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>        
+        <iframe class="prototype" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoVz2gg3oZiiYZiDIpkt2vD%2FMVP%3Fnode-id%3D465%253A43%26viewport%3D450%252C228%252C0.10298627614974976%26scaling%3Dscale-down-width" allowfullscreen></iframe>
     </div>
 </body>
 </html>
