--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <div class="container">
         <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSeZnTWkyhLD-vzapd3xoOZJdpK9Cv73pSWZBwYUgBIcFgf3qw/viewform?embedded=true" width="640" height="2136" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>        
-        <iframe class="prototype" style="border: 1px solid rgba(0, 0, 0, 0.1);" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoVz2gg3oZiiYZiDIpkt2vD%2FMVP%3Fnode-id%3D465%253A43%26viewport%3D450%252C228%252C0.10298627614974976%26scaling%3Dscale-down-width" allowfullscreen></iframe>
+        <iframe style="border: 1px solid rgba(0, 0, 0, 0.1);" width="1600" height="900" src="https://www.figma.com/embed?embed_host=share&url=https%3A%2F%2Fwww.figma.com%2Fproto%2FoVz2gg3oZiiYZiDIpkt2vD%2FMVP%3Fnode-id%3D465%253A43%26viewport%3D997%252C249%252C0.18699617683887482%26scaling%3Dmin-zoom" allowfullscreen></iframe>
     </div>
 </body>
 </html>
