--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
         <title>Eagle Cloud UT</title>
         <style>
             .container {
